// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`DividendTracker Snapshot matches snapshot with empty state 1`] = `
<View>
  <Text>
    Dividend Tracker
  </Text>
  <Text>
    No data available
  </Text>
</View>
`;

exports[`DividendTracker Snapshot matches snapshot with valid dividends 1`] = `
<View>
  <Text>
    Dividend Tracker
  </Text>
  <Text>
    2026-03-01
     — 
    TICK0
    : 
    R123.45
     Dividend 0
  </Text>
</View>
`;
